tests/basic/pos/Poly00.hs
module Poly00 where

{-@ zoo :: x:a -> {v:a | v = x} @-} 
zoo :: goober -> goober 
zoo x = x 
